game over reducer and store redux

--- a/frontend/src/widgets/chess-game/styles/chess-game.module.scss
+++ b/frontend/src/widgets/chess-game/styles/chess-game.module.scss
@@ -3,6 +3,19 @@
   height: 800px;
   display: flex;
   justify-content: center;
+  .gameOverCard {
+    width: 300px;
+    height: 100px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    gap:10px;
+    border:2px solid black;
+    top:40%;
+  }
+
   .buttons{
     height: 100%;
     display: flex;
@@ -14,4 +27,5 @@
       text-wrap: none;
     }
   }
+
 }
