--- a/frontend/src/pages/sign-in/login/styles/login.module.scss
+++ b/frontend/src/pages/sign-in/login/styles/login.module.scss
@@ -1,4 +1,4 @@
-.gameSearchPage{
+.loginPage{
   padding: 1rem 1.5rem;
   display: flex;
   flex-direction: column;
@@ -8,11 +8,4 @@
     font-size: 2.5rem;
     color: #FDFDFD;
   }
-}
-
-.gamePage{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 1rem 1.5rem;
 }
