--- a/frontend/src/features/registration/styles/registration.module.scss
+++ b/frontend/src/features/registration/styles/registration.module.scss
@@ -1,6 +1,43 @@
 .registration{
-  padding: 20px;
-  background: lightgray;
+  button {
+    margin: 0;
+    height: 3rem;
+    border: none;
+    color: #D2D4D4;
+    background-color: #465458;
+    font-size: 1.5rem;
+    font-weight: 500;
+    transition: 200ms ease-in-out;
+  }
+
+  button:hover {
+    background-color: #576667;
+  }
+
+  input {
+    flex-grow: 1;
+    height: 3rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    color: #D2D4D4;
+    background-color: #182327;
+  }
+
+  .showPasswordToggle{
+    width: 2.5rem;
+    background-color: #182327;
+  }
+
+  input::placeholder {
+    color: #576667;
+  }
+
+  div{
+    width: 100%;
+    display: flex;
+  }
 
   form {
     display: flex;
@@ -10,7 +47,6 @@
 }
 
 .error{
-  color: red;
-  font-weight: bold;
-  font-size:0.7rem;
+  color: #FF4545;
+  font-size: 1.5rem;
 }
