--- a/frontend/src/widgets/chess-game/styles/chess-game.module.scss
+++ b/frontend/src/widgets/chess-game/styles/chess-game.module.scss
@@ -1,24 +1,89 @@
 .wrapper{
   position: relative;
-  width: 800px;
-  height: 800px;
   display: flex;
+  align-items: center;
   justify-content: center;
-  gap: 10px;
+  flex-direction: column;
+  gap: 1.5rem;
+}
 
-  .rightPanel{
+h1 {
+  color: #576667;
+  font-size: 2rem;
+
+  .playerNameSpan {
+    color: #D2D4D4;
+    font-size: 2.5rem;
+  }
+}
+
+.resignSubmit{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  font-size: 1.3rem;
+
+  div {
     display: flex;
-    flex-direction: column;
+    gap: 1rem;
+  }
+
+  button {
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 1.7rem;
+    border: none;
+    color: #D2D4D4;
+    background-color: #465458;
+    font-size: 1.2rem;
+    font-weight: 500;
+    transition: 200ms ease-in-out;
+  }
+
+  button:hover {
+    background-color: #576667;
+  }
+}
+
+.horizontal {
+  display: flex;
+  gap: 2rem;
+  .timer {
+    color: #D2D4D4;
+    font-size: 2rem;
+  }
+
+  .timerRed {
+    color: #FF4545;
   }
 
   .buttons{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:20px;
-    button {
-      padding: 20px;
-      text-wrap: none;
-    }
+  }
+
+  button {
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 2.5rem;
+    border: none;
+    color: #D2D4D4;
+    background-color: #465458;
+    font-size: 1.5rem;
+    font-weight: 500;
+    transition: 200ms ease-in-out;
+  }
+
+  button:hover {
+    background-color: #576667;
+  }
+
+  .rightPanel{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
   }
 }
+
