--- a/frontend/src/pages/profile/styles/profile.module.scss
+++ b/frontend/src/pages/profile/styles/profile.module.scss
@@ -1,9 +1,21 @@
 .profilePage{
+  height: 100%;
+  flex-grow: 1;
   padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow-y: scroll;
 
   h1 {
     color: #FDFDFD;
     font-size: 2.5rem;
+  }
+
+  h2 {
+    color: #FDFDFD;
+    font-size: 1.9rem;
   }
 
   .aka {
@@ -16,4 +28,33 @@
     color: #D2D4D4;
     font-size: 1.5rem;
   }
+
+  .gamesHistory{
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 10rem;
+  }
+
+  button {
+    width: max-content;
+    padding: 0.5rem 1rem;
+    border: none;
+    color: #D2D4D4;
+    background-color: #3F4E4F;
+    font-size: 1.5rem;
+    font-weight: 500;
+    transition: 200ms ease-in-out;
+  }
+
+  button:hover {
+    background-color: #617074;
+  }
+
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
