--- a/frontend/src/layouts/chess-figure-layout/styles/chess-figure-layout.module.scss
+++ b/frontend/src/layouts/chess-figure-layout/styles/chess-figure-layout.module.scss
@@ -5,12 +5,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   background-color: #DCD7C9;
 
   img {
     width: 90%;
     height: 90%;
+  }
+  .coords{
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
 
