--- a/frontend/src/entities/profile/change-pic-dialog/styles/change-pic-dialog.module.scss
+++ b/frontend/src/entities/profile/change-pic-dialog/styles/change-pic-dialog.module.scss
@@ -1,17 +1,17 @@
-.gameOverDialog{
+.changePicDialog{
   padding: 1.5rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap:10px;
+  gap: 1rem;
 
   background-color: #2C363A;
   box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.3);
 
-  h1 {
+  h2 {
     color: #FDFDFD;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   p {
@@ -19,21 +19,16 @@
     font-size: 1.7rem;
   }
 
-  table{
-    width: 100%;
-    tr{
-      td {
-        color: #FDFDFD;
-        font-size: 1.5rem;
-      }
-      td+td{
-        color: #D2D4D4;
-        text-align: right;
-      }
-    }
+  img {
+    aspect-ratio: 1;
+    width: 20rem;
   }
 
-  button {
+  input[type="file"] {
+    display: none;
+  }
+
+  button, .buttonLabel{
     padding: 0.5rem 1rem;
     margin: 0;
     border: none;
@@ -44,15 +39,17 @@
     transition: 200ms ease-in-out;
   }
 
-  button:hover {
+  button:hover, .buttonLabel:hover{
     background-color: #576667;
   }
 
-  .ratingRed {
-    color: #FF4545;
+  button:disabled {
+    background-color: #314348;
+    color: #576667;
   }
 
-  .ratingGreen {
-    color: #4CD04C;
+  > div {
+    display: flex;
+    gap: 1rem;
   }
 }
