--- a/frontend/src/pages/profile/styles/profile.module.scss
+++ b/frontend/src/pages/profile/styles/profile.module.scss
@@ -6,7 +6,47 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  overflow-y: scroll;
+
+  .profileData {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .profilePicDiv {
+    height: 10rem;
+    width: 10rem;
+    position: relative;
+
+    img {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    button {
+      background-color: rgba(0,0,0,0.3);
+      width: 100%;
+      height: 0;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 0;
+      overflow: hidden;
+      transition: 150ms ease-in-out;
+    }
+
+    button:hover {
+      background-color: rgba(0,0,0,0.6);
+    }
+  }
+
+  .profilePicDiv:hover button {
+    height: 2.75rem;
+    padding: 0.5rem;
+  }
 
   h1 {
     color: #FDFDFD;
@@ -30,12 +70,27 @@
   }
 
   .gamesHistory{
-    width: min-content;
+    width: max-content;
+    height: 100%;
+    padding-right: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    margin-bottom: 10rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .gamesHistory::-webkit-scrollbar {
+    all: unset;
+  }
+
+  .gamesHistory::-webkit-scrollbar-thumb {
+    background-color: rgba(255,255,255,0.05);
+  }
+
+  .gamesHistory::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255,255,255,0.2);
   }
 
   button {
@@ -53,8 +108,4 @@
     background-color: #617074;
   }
 
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
