--- a/frontend/src/features/select-new-piece/styles/select-new-piece.module.scss
+++ b/frontend/src/features/select-new-piece/styles/select-new-piece.module.scss
@@ -9,11 +9,13 @@
   box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.3);
 
   img{
+    all: unset;
     width: 100%;
     height: 100%;
   }
 
   button {
+    all: unset;
     aspect-ratio: 1;
     width: 7rem;
     margin: 0;
