--- a/frontend/src/pages/game-review/styles/game-review.module.scss
+++ b/frontend/src/pages/game-review/styles/game-review.module.scss
@@ -1,3 +1,20 @@
+.gameReviewPage{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 1rem 1.5rem;
+  overflow: scroll;
+
+  .errorMessage {
+    font-size: 2.5rem;
+    color: #FDFDFD;
+  }
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .wrapper{
   position: relative;
   display: flex;
@@ -5,35 +22,6 @@
   justify-content: center;
   flex-direction: column;
   gap: 1.5rem;
-}
-
-.resignSubmit{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  font-size: 1.3rem;
-
-  div {
-    display: flex;
-    gap: 1rem;
-  }
-
-  button {
-    padding: 0 0.5rem;
-    width: 100%;
-    height: 1.7rem;
-    border: none;
-    color: #D2D4D4;
-    background-color: #465458;
-    font-size: 1.2rem;
-    font-weight: 500;
-    transition: 200ms ease-in-out;
-  }
-
-  button:hover {
-    background-color: #576667;
-  }
 }
 
 .horizontal {
@@ -62,13 +50,21 @@
     background-color: #576667;
   }
 
+  button:disabled {
+    background-color: #314348;
+    color: #576667;
+  }
+
   .rightPanel{
-    width: max-content;
+    width: 10rem;
     max-height: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    .historyButtons {
+      display: flex;
+      gap: 0.5rem;
+    }
   }
 }
-
-
