--- a/frontend/src/features/chess-history/styles/chess-history.module.scss
+++ b/frontend/src/features/chess-history/styles/chess-history.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   overflow-y: scroll;
   overflow-x: hidden;
+  overflow-anchor: unset;
 }
 
 .historyContainer::-webkit-scrollbar {
