--- a/frontend/src/widgets/chess-game/styles/chess-game.module.scss
+++ b/frontend/src/widgets/chess-game/styles/chess-game.module.scss
@@ -1,10 +1,18 @@
 .wrapper{
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
   gap: 1.5rem;
+
+  .game{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.7em;
+  }
 }
 
 .resignSubmit{
@@ -68,6 +76,16 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .game{
+    align-items:start;
+  }
+  .wrapper{
+    flex-direction: column;
+    align-items: center;
   }
 }
 
