editing and deleting rating ranges

--- a/frontend/src/pages/admin-panel/styles/admin-panel-page.module.scss
+++ b/frontend/src/pages/admin-panel/styles/admin-panel-page.module.scss
@@ -1,24 +1,29 @@
 .wrapper {
   display: flex;
-  overflow-x: auto;
-  gap: 2px;
-  width: 100%;
-  border-bottom: 2px solid #555;
+  flex-direction: column;
+  padding: 0 0.5rem;
 
+  .tabsBar {
+    width: 100%;
+    display: flex;
+    gap: 0.5rem;
+    overflow-x: auto;
+    border-bottom: 0.2rem solid #3F4E4F;
+  }
 
   button {
     border: none;
-    padding: 10px 20px;
+    padding: 0.5rem 0.75rem;
     cursor: pointer;
-    font-size: 16px;
-    margin-right: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
     color: #d2d4d4;
     outline: none;
     background-color: #2b3a3f;
   }
 
   button:hover {
-    color: #555;
+    color: #617074;
   }
 
   .active {
