--- a/frontend/src/pages/admin-panel/pages/users/styles/users-page.module.scss
+++ b/frontend/src/pages/admin-panel/pages/users/styles/users-page.module.scss
@@ -6,10 +6,40 @@
   align-items: center;
   gap: 10px;
 
-  .searchLine{
+  .searchLine {
     width: 100%;
   }
-  input{
+
+  .filtersDiv {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    span {
+      font-size: 2rem;
+      color: #D2D4D4;
+    }
+
+    button {
+      padding: 0.4rem 0.8rem;
+      font-size: 1.8rem;
+      font-weight: 500;
+    }
+
+    input {
+      -moz-appearance: textfield;
+      width: 7rem;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+
+  input {
     width: 100%;
     height: 3rem;
     padding: 0.5rem 1rem;
@@ -19,25 +49,46 @@
     color: #D2D4D4;
     background-color: #182327;
   }
+
   input::placeholder {
     color: #576667;
   }
 
   .usersTable {
     border-collapse: collapse;
+
     tr {
       width: auto;
     }
-    th{
-      padding: 1rem;
+
+    .headersRow {
+      td {
+        width: max-content;
+        cursor: default;
+        transition: 200ms ease-in-out;
+
+        img {
+          height: 1.2rem;
+          display: inline;
+          aspect-ratio: 1;
+          margin-bottom: -0.1rem;
+          margin-right: 0.1rem;
+        }
+      }
+
+      td:hover {
+        background-color: #3F4E4F;
+      }
     }
+
     td {
       color: #D2D4D4;
       font-size: 1.5rem;
       padding: 0.3rem 0.6rem;
       vertical-align: center;
     }
-    td img{
+
+    td img {
 
       height: 1.7rem;
       margin-top: 0.2rem;
