--- a/frontend/src/pages/admin-panel/pages/users/styles/users-page.module.scss
+++ b/frontend/src/pages/admin-panel/pages/users/styles/users-page.module.scss
@@ -78,3 +78,31 @@
     width: 100%;
   }
 }
+
+.deleteSubmit {
+  display: flex;
+  font-size: 1.3rem;
+  gap: 1rem;
+  flex-direction: column;
+
+  div {
+    display: flex;
+    gap: 1rem;
+  }
+
+  button {
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 1.7rem;
+    border: none;
+    color: #D2D4D4;
+    background-color: #465458;
+    font-size: 1.2rem;
+    font-weight: 500;
+    transition: 200ms ease-in-out;
+  }
+
+  button:hover {
+    background-color: #576667;
+  }
+}
