--- a/frontend/src/pages/user/styles/user-page.module.scss
+++ b/frontend/src/pages/user/styles/user-page.module.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
   gap: 1rem;
 
+  .errorMessage {
+    font-size: 2.5rem;
+    color: #FDFDFD;
+  }
+
   button {
     width: max-content;
     padding: 0.5rem 1rem;
@@ -36,6 +41,30 @@
   p {
     color: #D2D4D4;
     font-size: 1.5rem;
+  }
+
+  .gamesHistory{
+    width: max-content;
+    height: 100%;
+    padding-right: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .gamesHistory::-webkit-scrollbar {
+    all: unset;
+  }
+
+  .gamesHistory::-webkit-scrollbar-thumb {
+    background-color: rgba(255,255,255,0.05);
+  }
+
+  .gamesHistory::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255,255,255,0.2);
   }
 }
 
