--- a/frontend/src/pages/profile/styles/profile.module.scss
+++ b/frontend/src/pages/profile/styles/profile.module.scss
@@ -3,12 +3,34 @@
   width: auto;
   flex-grow: 1;
   padding: 1rem;
+  gap: 1rem;
 
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 
-  .gamesHistory{
+  .panels {
+    max-height: 80%;
+    display: flex;
+    gap: 1rem;
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .friendsTabs {
+      display: flex;
+      gap: 0.2rem;
+
+      button:disabled {
+        background-color: #314348;
+        color: #949C9C;
+      }
+    }
+  }
+
+  .gamesHistory, .friendsList{
     width: max-content;
     height: 100%;
     padding-right: 0.5rem;
@@ -18,17 +40,18 @@
     gap: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
+
   }
 
-  .gamesHistory::-webkit-scrollbar {
+  .gamesHistory::-webkit-scrollbar, .friendsList::-webkit-scrollbar {
     all: unset;
   }
 
-  .gamesHistory::-webkit-scrollbar-thumb {
+  .gamesHistory::-webkit-scrollbar-thumb, .friendsList::-webkit-scrollbar-thumb {
     background-color: rgba(255,255,255,0.05);
   }
 
-  .gamesHistory::-webkit-scrollbar-thumb:hover {
+  .gamesHistory::-webkit-scrollbar-thumb:hover, .friendsList::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255,255,255,0.2);
   }
 
