ability to play with friend

--- a/frontend/src/pages/user/styles/user-page.module.scss
+++ b/frontend/src/pages/user/styles/user-page.module.scss
@@ -68,6 +68,11 @@
   }
 }
 
+.playFriendForm {
+  background-color: #3F4E4F;
+  padding: 2rem;
+}
+
 @media screen and (max-width: 768px){
   .profilePage{
     align-items: center;
