--- a/frontend/src/pages/profile/styles/profile.module.scss
+++ b/frontend/src/pages/profile/styles/profile.module.scss
@@ -97,6 +97,11 @@
   }
 }
 
+.playFriendForm {
+  background-color: #3F4E4F;
+  padding: 2rem;
+}
+
 @media screen and (max-width: 768px){
   .profilePage{
     align-items: center;
