--- a/frontend/src/pages/game/styles/game.module.scss
+++ b/frontend/src/pages/game/styles/game.module.scss
@@ -1,4 +1,5 @@
 .gameSearchPage{
+  width: max-content;
   padding: 1rem 1.5rem;
   display: flex;
   flex-direction: column;
@@ -12,8 +13,8 @@
 
 .gamePage{
   position: relative;
-  width: 100%;
   height: 100%;
+  width: 100%;
   padding: 1rem 1.5rem;
   overflow: scroll;
 }
@@ -23,7 +24,6 @@
 }
 
 @media screen and (max-width: 768px){
-
   .gamePage{
     display: flex;
     flex-direction: column;
