--- a/frontend/src/widgets/chess-game/styles/chess-game.module.scss
+++ b/frontend/src/widgets/chess-game/styles/chess-game.module.scss
@@ -76,6 +76,15 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    .transferSelect{
+      padding: 0.5rem;
+      border: none;
+      outline: none;
+      font-size: 1.5rem;
+      color: #D2D4D4;
+      background-color: #182327;
+    }
   }
 }
 
