--- a/frontend/src/pages/admin-panel/pages/games/styles/games-page.module.scss
+++ b/frontend/src/pages/admin-panel/pages/games/styles/games-page.module.scss
@@ -1,17 +1,37 @@
- .searchLine{
-   margin: 0.5rem 0;
-    input {
-      width: 100%;
-      height: 3rem;
-      padding: 0.5rem 1rem;
-      border: none;
-      outline: none;
-      font-size: 1.5rem;
-      color: #D2D4D4;
-      background-color: #182327;
-    }
+.searchLine {
+  margin: 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 
-    input::placeholder {
-      color: #576667;
-    }
+  input {
+    width: 100%;
+    height: 3rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    color: #D2D4D4;
+    background-color: #182327;
   }
+
+  input::placeholder {
+    color: #576667;
+  }
+}
+
+.dateRange {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  color: #D2D4D4;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-left: 0.5rem;
+
+  input {
+    max-width: 82%;
+  }
+}
+
