--- a/frontend/src/layouts/chess-figure-layout/styles/chess-figure-layout.module.scss
+++ b/frontend/src/layouts/chess-figure-layout/styles/chess-figure-layout.module.scss
@@ -19,12 +19,14 @@
 .wrapper img {
   width: 90%;
   height: 90%;
+  z-index: 550;
 }
 
 .letters {
   position: absolute;
   right: 0.3rem;
   bottom: 0;
+  z-index: 500;
 
   font-size: 1.3rem;
   font-weight: 600;
@@ -35,6 +37,7 @@
   position: absolute;
   left: 0.2rem;
   top: 0.1rem;
+  z-index: 500;
 
   font-size: 1.3rem;
   font-weight: 600;
